--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,17 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.10",
+    "@chakra-ui/react": "^1.5.1",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.3.0",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "antd": "^4.15.0",
+    "framer-motion": "^4.1.4",
     "mobx": "^6.1.8",
     "mobx-react": "^7.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-syntax-highlighter": "^15.4.3",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
   },
@@ -24,6 +30,7 @@
     "@types/react-dom": "^17.0.3",
     "@types/react-router": "^5.1.13",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-syntax-highlighter": "^13.5.0",
     "eslint": "^7.23.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
