--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,12 @@
+aiohttp==3.7.4.post0
 alembic==1.5.8
+async-timeout==3.0.1
 asyncpg==0.22.0
+attrs==20.3.0
 bcrypt==3.2.0
 certifi==2020.12.5
 cffi==1.14.5
+chardet==4.0.0
 click==7.1.2
 cryptography==3.4.7
 databases==0.4.1
@@ -14,6 +18,7 @@ httpx==0.17.1
 idna==3.1
 Mako==1.1.4
 MarkupSafe==1.1.1
+multidict==5.1.0
 multipart==0.2.4
 ormar==0.10.3
 passlib==1.7.4
@@ -34,3 +39,4 @@ SQLAlchemy==1.3.23
 starlette==0.13.6
 typing-extensions==3.7.4.3
 uvicorn==0.13.4
+yarl==1.6.3
