--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -41,6 +41,9 @@
     "import/extensions": 0,
     "linebreak-style": 0,
     "no-unused-vars": "warn",
-    "@typescript-eslint/explicit-module-boundary-types": 0
+    "@typescript-eslint/explicit-module-boundary-types": 0,
+    "no-shadow": 0,
+    "@typescript-eslint/no-shadow": ["error"],
+    "class-methods-use-this": 0
   }
 }
