--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,9 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "effector": "^21.8.11",
+    "effector-react": "^21.3.2",
     "framer-motion": "^4.1.4",
-    "mobx": "^6.1.8",
-    "mobx-react": "^7.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
