--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -23,15 +23,14 @@
   "settings": {
     "import/resolver": {
       "node": {
-        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+        "extensions": [".js", ".jsx"]
       }
     }
   },
   "rules": {
     "no-use-before-define": "off",
-    "@typescript-eslint/no-use-before-define": ["warn"],
     "react/jsx-filename-extension": [1, {
-      "extensions": [".jsx", ".tsx"]
+      "extensions": [".jsx"]
     }],
     "import/extensions": "off",
     "linebreak-style": "off",
