--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.1.10",
     "effector": "^21.8.12",
     "effector-react": "^21.3.3",
+    "formik": "^2.2.9",
     "framer-motion": "^4",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
