--- a/frontend_ts/package.json
+++ b/frontend_ts/package.json
@@ -1,32 +1,35 @@
 {
-  "name": "frontend2",
+  "name": "frontend_ts",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.6",
-    "@emotion/react": "^11.8.1",
+    "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
-    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
+    "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
-    "@types/react": "^17.0.39",
+    "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "@types/react-icons": "^3.0.0",
+    "@types/react-redux": "^7.1.23",
     "@types/react-router-dom": "^5.3.3",
-    "axios": "^0.26.0",
+    "@types/react-syntax-highlighter": "^13.5.2",
+    "axios": "^0.26.1",
+    "file-dialog": "^0.0.8",
     "focus-visible": "^5.2.0",
     "framer-motion": "^6.2.8",
     "querystring": "^0.2.1",
     "react": "^17.0.2",
-    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-syntax-highlighter": "^15.4.5",
     "redux-thunk": "^2.4.1",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
@@ -54,8 +57,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "eslint": "^7.14.0"
   }
 }
