--- a/frontend_ts/package.json
+++ b/frontend_ts/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/focus-lock": "^1.2.6",
     "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.6",
     "@emotion/react": "^11.8.2",
@@ -30,6 +31,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-syntax-highlighter": "^15.4.5",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
