--- a/frontend_ts/package.json
+++ b/frontend_ts/package.json
@@ -6,8 +6,10 @@
     "@chakra-ui/focus-lock": "^1.2.6",
     "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.6",
+    "@codemirror/lang-python": "^0.19.4",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@monaco-editor/react": "^4.3.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -18,8 +20,11 @@
     "@types/react-icons": "^3.0.0",
     "@types/react-redux": "^7.1.23",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-router-redux": "^5.0.21",
     "@types/react-syntax-highlighter": "^13.5.2",
+    "@uiw/react-codemirror": "^4.5.1",
     "axios": "^0.26.1",
+    "codemirror": "^5.65.2",
     "file-dialog": "^0.0.8",
     "focus-visible": "^5.2.0",
     "framer-motion": "^6.2.8",
