--- a/frontend_ts/package.json
+++ b/frontend_ts/package.json
@@ -24,7 +24,9 @@
     "@types/react-syntax-highlighter": "^13.5.2",
     "@uiw/react-codemirror": "^4.5.1",
     "axios": "^0.26.1",
+    "buffer": "^6.0.3",
     "codemirror": "^5.65.2",
+    "crypto-js": "^4.1.1",
     "file-dialog": "^0.0.8",
     "focus-visible": "^5.2.0",
     "framer-motion": "^6.2.8",
