--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.9
-WORKDIR /code
+ENV DOCKER=true
 COPY ./requirements.txt /code/requirements.txt
+WORKDIR /code
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
 COPY ./ /code/backend
