--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,44 +1,70 @@
 aiohttp==3.8.1
 aiosignal==1.2.0
 alembic==1.7.6
+amqp==5.1.1
 anyio==3.5.0
 asgiref==3.5.0
 async-timeout==4.0.2
 asyncpg==0.25.0
 attrs==21.4.0
 bcrypt==3.2.0
+billiard==3.6.4.0
+celery==5.2.7
 certifi==2022.6.15
 cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.0.4
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 colorama==0.4.4
 cryptography==36.0.1
 databases==0.5.5
+Deprecated==1.2.13
+docker==5.0.3
 ecdsa==0.17.0
+epicbox==1.1.0
 fastapi==0.78.0
+flower==1.1.0
 frozenlist==1.3.0
 greenlet==1.1.2
 gunicorn==20.1.0
 h11==0.13.0
+humanize==4.2.3
 idna==3.3
+kombu==5.2.4
 Mako==1.1.6
 MarkupSafe==2.1.0
 multidict==6.0.2
+packaging==21.3
 passlib==1.7.4
+prometheus-client==0.14.1
+prompt-toolkit==3.0.30
+psycopg2==2.9.3
 pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.9.0
 pydantic-sqlalchemy==0.0.9
+pyparsing==3.0.9
+python-dateutil==2.8.2
+python-dotenv==0.20.0
 python-jose==3.3.0
 python-multipart==0.0.5
+pytz==2022.1
+redis==4.3.4
 requests==2.28.0
 rsa==4.8
 six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.31
 starlette==0.19.1
+structlog==22.1.0
+tornado==6.2
 typing_extensions==4.1.1
 urllib3==1.26.9
 uvicorn==0.17.5
+vine==5.0.0
+wcwidth==0.2.5
+websocket-client==1.3.3
+wrapt==1.14.1
 yarl==1.7.2
-python-dotenv~=0.20.0
