task checker is completed; add checker status info

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
       - postgres-db
     networks:
       - db-backend
+      - redis-go-net
+      - rabbitmq-go-net
       
   frontend:
     build: ./frontend
