--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "querystring": "^0.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
