--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:alpine
 WORKDIR /usr/src/app
 COPY package.json ./
-COPY package-lock.json ./
-COPY . .
-RUN npm i
+COPY yarn.lock ./
+RUN yarn install
+COPY . ./
