--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:alpine
 WORKDIR /usr/src/app
-COPY package.json ./
-COPY yarn.lock ./
-COPY . ./
-RUN yarn install
+COPY package*.json ./
+RUN npm install
+EXPOSE 3000
+CMD ["npm", "start"]
 
