--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,9 @@
 FROM node:alpine
 WORKDIR /usr/src/app
 COPY package*.json ./
-RUN npm install
+RUN npm ci
+RUN npm run build
+ENV NODE_ENV production
 EXPOSE 3000
-CMD ["npm", "start"]
+CMD [ "npx", "serve", "build" ]
 
