--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:alpine
 WORKDIR /usr/src/app
 COPY . .
-RUN npm ci
+RUN npm install
 RUN npm run build
 ENV NODE_ENV production
 EXPOSE 3000
