--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
+    "serve": "^14.1.2",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.19"
