--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,16 @@
-FROM node:alpine
+FROM node:alpine as build-stage
 WORKDIR /usr/src/app
-COPY . .
+COPY package*.json ./
 RUN npm install
-RUN npm run build
-ENV NODE_ENV production
-EXPOSE 3000
-CMD [ "npx", "serve", "build" ]
-
+COPY . .
+RUN npm run build 
+FROM nginx:alpine
+COPY ./.nginx/nginx.conf /etc/nginx/nginx.conf
+COPY ./cert/taskcheckingsystem.crt /etc/ssl/taskcheckingsystem.crt
+COPY ./cert/taskcheckingsystem.key /etc/ssl/taskcheckingsystem.key
+COPY ./cert/ca.crt /etc/ssl/ca.crt
+RUN rm -rf /usr/share/nginx/html/*
+COPY --from=build-stage /usr/src/app/build /usr/share/nginx/html
+RUN chown nginx:nginx /usr/share/nginx/html/*
+EXPOSE 80
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
