fix error nginx.conf: include mimetypes (v.2)

--- a/frontend/.nginx/nginx.conf
+++ b/frontend/.nginx/nginx.conf
@@ -3,9 +3,9 @@ events {
     worker_connections 8000;
     multi_accept on;
 }
-include /etc/nginx/mime.types
 
 http {
+    include /etc/nginx/mime.types;
     server {
         listen 80;
         listen 443 ssl;
