--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,9 +7,11 @@ asgiref==3.5.0
 astroid==2.11.7
 async-timeout==4.0.2
 asyncpg==0.25.0
+asynctest==0.13.0
 attrs==21.4.0
 bcrypt==3.2.0
 billiard==3.6.4.0
+cached-property==1.5.2
 celery==5.2.7
 certifi==2022.6.15
 cffi==1.15.0
@@ -18,6 +20,7 @@ click==8.0.4
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+colorama==0.4.6
 cryptography==36.0.1
 databases==0.5.5
 Deprecated==1.2.13
@@ -33,6 +36,8 @@ gunicorn==20.1.0
 h11==0.13.0
 humanize==4.2.3
 idna==3.3
+importlib-metadata==5.1.0
+importlib-resources==5.10.1
 isort==5.10.1
 kombu==5.2.4
 lazy-object-proxy==1.7.1
@@ -51,13 +56,14 @@ pycodestyle==2.9.1
 pycparser==2.21
 pydantic==1.9.0
 pydantic-sqlalchemy==0.0.9
-pylint==2.14.5
+pylint==2.13.9
 pyparsing==3.0.9
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 python-jose==3.3.0
 python-multipart==0.0.5
 pytz==2022.1
+pywin32==227
 redis==4.3.4
 requests==2.28.0
 rsa==4.8
@@ -69,6 +75,7 @@ structlog==22.1.0
 tomli==2.0.1
 tomlkit==0.11.3
 tornado==6.2
+typed-ast==1.5.4
 typing_extensions==4.1.1
 urllib3==1.26.9
 uvicorn==0.17.5
@@ -77,3 +84,4 @@ wcwidth==0.2.5
 websocket-client==1.3.3
 wrapt==1.14.1
 yarl==1.7.2
+zipp==3.11.0
