update unit test worker.py

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,10 @@
-FROM python:3.9
+FROM python:3.10.9
 ENV DOCKER=true
+RUN apt-get update \
+    && apt-get -y install libpq-dev gcc \
+    && pip install psycopg2
 COPY ./requirements.txt /code/requirements.txt
 WORKDIR /code
+RUN pip install --upgrade pip
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 COPY ./ /code/backend
