--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,86 +1,62 @@
-aiohttp==3.8.1
-aiosignal==1.2.0
-alembic==1.7.6
+aiohttp==3.8.4
+aiosignal==1.3.1
+alembic==1.9.3
 amqp==5.1.1
-anyio==3.5.0
-asgiref==3.5.0
-astroid==2.11.7
+anyio==3.6.2
 async-timeout==4.0.2
-asyncpg==0.25.0
-asynctest==0.13.0
-attrs==21.4.0
-bcrypt==3.2.0
+asyncpg==0.27.0
+attrs==22.2.0
+bcrypt==4.0.1
 billiard==3.6.4.0
-cached-property==1.5.2
 celery==5.2.7
-certifi==2022.6.15
-cffi==1.15.0
-charset-normalizer==2.0.12
-click==8.0.4
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.0.1
+click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 colorama==0.4.6
-cryptography==36.0.1
-databases==0.5.5
-Deprecated==1.2.13
-dill==0.3.5.1
-docker==5.0.3
-ecdsa==0.17.0
+cryptography==39.0.1
+docker==6.0.1
+ecdsa==0.18.0
 epicbox==1.1.0
-fastapi==0.78.0
-flower==1.1.0
-frozenlist==1.3.0
-greenlet==1.1.2
-gunicorn==20.1.0
-h11==0.13.0
-humanize==4.2.3
-idna==3.3
-importlib-metadata==5.1.0
-importlib-resources==5.10.1
-isort==5.10.1
+fastapi==0.92.0
+frozenlist==1.3.3
+greenlet==2.0.2
+h11==0.14.0
+idna==3.4
 kombu==5.2.4
-lazy-object-proxy==1.7.1
-Mako==1.1.6
-MarkupSafe==2.1.0
-mccabe==0.7.0
-multidict==6.0.2
-packaging==21.3
+Mako==1.2.4
+MarkupSafe==2.1.2
+multidict==6.0.4
+packaging==23.0
 passlib==1.7.4
-platformdirs==2.5.2
-prometheus-client==0.14.1
-prompt-toolkit==3.0.30
-psycopg2==2.9.3
+prompt-toolkit==3.0.36
+psycopg2==2.9.5
+psycopg2-binary==2.9.5
 pyasn1==0.4.8
-pycodestyle==2.9.1
+pycodestyle==2.10.0
 pycparser==2.21
-pydantic==1.9.0
+pydantic==1.10.4
 pydantic-sqlalchemy==0.0.9
-pylint==2.13.9
-pyparsing==3.0.9
 python-dateutil==2.8.2
-python-dotenv==0.20.0
+python-dotenv==0.21.1
 python-jose==3.3.0
 python-multipart==0.0.5
-pytz==2022.1
-redis==4.3.4
-requests==2.28.0
-rsa==4.8
+pytz==2022.7.1
+redis==4.5.1
+requests==2.28.2
+rsa==4.9
 six==1.16.0
-sniffio==1.2.0
-SQLAlchemy==1.4.31
-starlette==0.19.1
-structlog==22.1.0
-tomli==2.0.1
-tomlkit==0.11.3
-tornado==6.2
-typed-ast==1.5.4
-typing_extensions==4.1.1
-urllib3==1.26.9
-uvicorn==0.17.5
+sniffio==1.3.0
+SQLAlchemy==1.4.46
+starlette==0.25.0
+structlog==22.3.0
+typing_extensions==4.4.0
+urllib3==1.26.14
+uvicorn==0.20.0
 vine==5.0.0
-wcwidth==0.2.5
-websocket-client==1.3.3
-wrapt==1.14.1
-yarl==1.7.2
-zipp==3.11.0
+wcwidth==0.2.6
+websocket-client==1.5.1
+yarl==1.8.2
