nginix for auth frontend

--- a/frontend/.nginx/nginx.conf
+++ b/frontend/.nginx/nginx.conf
@@ -25,6 +25,10 @@ http {
             proxy_pass http://backend:8000/;
         }
 
+        location /service-auth {
+           proxy_pass http://auth:3340
+        }
+
         location / {
             root /usr/share/nginx/html;
             index index.html;
