nginix for auth frontend

--- a/frontend/.nginx/nginx.conf
+++ b/frontend/.nginx/nginx.conf
@@ -25,8 +25,8 @@ http {
             proxy_pass http://backend:8000/;
         }
 
-        location /service-auth {
-           proxy_pass http://auth:3340
+        location /service-auth/ {
+           proxy_pass http://auth:3340;
         }
 
         location / {
