fix error paths in auth microfrontend

--- a/frontend/.nginx/nginx.conf
+++ b/frontend/.nginx/nginx.conf
@@ -26,8 +26,11 @@ http {
         }
 
         location /service-auth/ {
-           proxy_pass http://auth:3340;
+           rewrite ^/service-auth/(.*) /$1 break;
+	   proxy_pass http://auth:3340/;
+
         }
+
 
         location / {
             root /usr/share/nginx/html;
