--- a/docker-compose-windows-dev.yml
+++ b/docker-compose-windows-dev.yml
@@ -24,8 +24,8 @@ services:
       - RABBITMQ_DEFAULT_USER=${RABBITMQ_USER}
       - RABBITMQ_DEFAULT_PASS=${RABBITMQ_PASSWORD}
     ports:
-      - 5672:5672
-      - 15672:15672
+      - ${RABBITMQ_PORT}:5672
+      - ${RABBITMQ_PORT_ADD}:15672
     volumes:
       - D:/Volumes/TCS/rabbitmq/data:/var/lib/rabbitmq/mnesia
       - D:/Volumes/TCS/rabbitmq/log:/var/log/rabbitmq
@@ -36,11 +36,21 @@ services:
     image: redis:7.0.4-alpine
     command: --requirepass ${REDIS_PASSWORD}
     ports:
-      - 6379:6379
+      - ${REDIS_PORT}:6379
     volumes:
       - D:/Volumes/TCS/redis:/data
     networks:
       - redis-go-net
+  auth:
+    build:
+      context: ./auth-frontend
+    ports:
+      - 3340:3340
+    stdin_open: true
+    networks:
+      - frontend-services
+
+
 
   celery-worker:
     build: ./backend
@@ -51,7 +61,6 @@ services:
       - redis
     volumes:
       - ./backend:/code
-      - /var/run/docker.sock:/var/run/docker.sock
     command: "celery -A celery_worker.worker worker -l info -Q check-solution-queue -c 1"
     networks:
       - rabbitmq-go-net
@@ -59,9 +68,9 @@ services:
 
   celery-flower:
     image: mher/flower:0.9.7
-    command: ["flower", "--broker=amqp://${RABBITMQ_USER}:${RABBITMQ_PASSWORD}@rabbitmq:5672//", "--port=5555"]
+    command: ["flower", "--broker=amqp://${RABBITMQ_USER}:${RABBITMQ_PASSWORD}@rabbitmq:5672//", "--port=${CELERY_FLOWER_PORT}"]
     ports:
-      - "5555:5555"
+      - "${CELERY_FLOWER_PORT}:${CELERY_FLOWER_PORT}"
     depends_on:
       - rabbitmq
       - redis
