--- a/auth-frontend/package.json
+++ b/auth-frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "webpack --config webpack.config.prod.js --mode production",
     "build:dev": "webpack --mode development",
-    "start": "webpack serve --open --mode development",
+    "start:dev": "webpack-dev-server --host 0.0.0.0 --hot",
     "start:live": "webpack serve --open --mode development --live-reload --hot"
   },
   "dependencies": {
@@ -54,7 +54,6 @@
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
-    "redux-devtools-extension": "^2.13.9",
     "serve": "^14.1.2",
     "style-loader": "^3.3.0",
     "typescript": "^4.5.2",
