--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,5 +1,14 @@
-FROM node:alpine as build-stage
-WORKDIR /usr/src/app
-COPY package*.json ./
-RUN npm install
+FROM node:20.3-buster-slim as build
+
+RUN apt-get update
+WORKDIR /app
+
+COPY package.json ./
+COPY yarn.lock ./
+RUN yarn install
+
 COPY . .
+
+EXPOSE 3000
+
+CMD yarn start:dev
