--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "build": "webpack --config webpack.config.prod.js --mode production",
     "build:dev": "webpack --mode development",
     "build:start": "cd dist && PORT=3000 npx serve",
-    "start": "webpack serve --open --mode development",
+    "start:dev": "webpack-dev-server --host 0.0.0.0 --hot",
     "start:live": "webpack serve --open --mode development --live-reload --hot"
   },
   "dependencies": {
@@ -54,9 +54,8 @@
     "react-icons": "^3.11.0",
     "react-router": "^6.4.4",
     "react-router-dom": "^6.4.4",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
-    "redux-devtools-extension": "^2.13.9",
     "serve": "^14.1.2",
     "source-map-loader": "^4.0.1",
     "style-loader": "^3.3.0",
