--- a/docker-compose-macos-dev.yml
+++ b/docker-compose-macos-dev.yml
@@ -38,7 +38,6 @@ services:
       - .env
     ports:
       - "${BACKEND_PORT}:8000"
-    restart: on-failure
     depends_on:
       - kafka
     networks:
@@ -49,21 +48,17 @@ services:
     build: 
       context: ./frontend
       dockerfile: Dockerfile.dev
+    # Windows bug with WSL 2: https://github.com/microsoft/WSL/issues/4739#issue-534049240
+    # ==========
+    environment:
+      - WATCHPACK_POLLING=true
+    # ==========
     env_file:
       - .env
-    environment:
-      - REACT_APP_PROD_SITE_URL=${REACT_APP_PROD_SITE_URL}
-      - REACT_APP_DEV_SITE_URL=${REACT_APP_DEV_SITE_URL}
-      - REACT_APP_PROD_API_URL=${REACT_APP_PROD_API_URL}
-      - REACT_APP_DEV_API_URL=${REACT_APP_DEV_API_URL}
-      - REACT_APP_PROD_VK_CLIENT_ID=${REACT_APP_PROD_VK_CLIENT_ID}
-      - REACT_APP_DEV_VK_CLIENT_ID=${REACT_APP_DEV_VK_CLIENT_ID}
-      - REACT_APP_SECRET=${REACT_APP_SECRET}
-      - NODE_ENV=development
     ports:
       - 3000:3000
     volumes:
-      - ./frontend:/usr/src/app
+      - ./frontend:/app
       - /usr/src/app/node_modules
     networks:
       - backend-frontend
