--- a/chat-frontend/Dockerfile
+++ b/chat-frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:lts-alpine3.17 as build
+FROM node:20.2-buser-slim as build
 WORKDIR /build
 ENV NODE_ENV=production
 RUN yarn
@@ -6,7 +6,7 @@ COPY . .
 RUN yarn build
 RUN mv /build/dist /app
 
-FROM node:lts-alpine3.17
+FROM node:20.2-buster-slim
 WORKDIR /app
 COPY --from=build /app .
 RUN npm install -g serve
