--- a/docker-compose-windows-dev.yml
+++ b/docker-compose-windows-dev.yml
@@ -1,6 +1,34 @@
 version: '3.8'
 
 services:
+  # https://vinybrasil.github.io/portfolio/kafkafastapiasync/
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    environment:
+      ZOOKEEPER_CLIENT_PORT: ${ZOOKEEPER_CLIENT_PORT}
+      ZOOKEEPER_TICK_TIME: ${ZOOKEEPER_TICK_TIME}
+    ports:
+      - ${ZOOKEEPER_CLIENT_PORT}:${ZOOKEEPER_CLIENT_PORT}
+    networks:
+      - zookeeper-kafka
+
+  # https://vinybrasil.github.io/portfolio/kafkafastapiasync/
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    depends_on:
+      - zookeeper
+    ports:
+      - ${KAFKA_PORT}:29092
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:${ZOOKEEPER_CLIENT_PORT}
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    networks:
+      - zookeeper-kafka
+
   backend:
     build: ./backend
     command: uvicorn api.server:app --host 0.0.0.0 --reload
@@ -8,39 +36,13 @@ services:
       - ./backend:/code
     env_file:
       - .env
-    environment:
-      - DEBUG=1
     ports:
       - "${BACKEND_PORT}:8000"
-    restart: on-failure
+    depends_on:
+      - kafka
     networks:
-      - redis-go-net
-      - rabbitmq-go-net
       - backend-frontend
-
-  rabbitmq:
-    image: rabbitmq:3.5
-    environment:
-      - RABBITMQ_DEFAULT_USER=${RABBITMQ_USER}
-      - RABBITMQ_DEFAULT_PASS=${RABBITMQ_PASSWORD}
-    ports:
-      - ${RABBITMQ_PORT}:5672
-      - ${RABBITMQ_PORT_ADD}:15672
-    volumes:
-      - D:/Volumes/TCS/rabbitmq/data:/var/lib/rabbitmq/mnesia
-      - D:/Volumes/TCS/rabbitmq/log:/var/log/rabbitmq
-    networks:
-      - rabbitmq-go-net
-
-  redis:
-    image: redis:7.0.4-alpine
-    command: --requirepass ${REDIS_PASSWORD}
-    ports:
-      - ${REDIS_PORT}:6379
-    volumes:
-      - D:/Volumes/TCS/redis:/data
-    networks:
-      - redis-go-net
+      - zookeeper-kafka
 
   frontend:
     build:
@@ -57,12 +59,13 @@ services:
       - 3000:3000
     volumes:
       - ./frontend:/app
-      - /app/node_modules
+      - /usr/src/app/node_modules
     networks:
       - backend-frontend
-      - frontend-services
     tty: true
     stdin_open: true
+    depends_on:
+      - backend
 
   auth:
     build:
@@ -80,6 +83,21 @@ services:
       - /app/node_modules
     networks:
       - frontend-services
+    stdin_open: true
+
+  task-checker:
+    build: ./TaskChecker
+    command: python3 main.py
+    volumes:
+      - ./TaskChecker:/code
+      - /var/run/docker.sock:/var/run/docker.sock
+    env_file:
+      - .env
+    privileged: true
+    depends_on:
+      - kafka
+    networks:
+      - zookeeper-kafka
     stdin_open: true
 
   chat:
@@ -100,37 +118,8 @@ services:
       - frontend-services
     stdin_open: true
 
-  celery-worker:
-    build: ./backend
-    env_file:
-      - .env
-    depends_on:
-      - rabbitmq
-      - redis
-    volumes:
-      - ./backend:/codes
-    command: "celery -A celery_worker.worker worker -l info -Q check-solution-queue -c 1"
-    networks:
-      - rabbitmq-go-net
-      - redis-go-net
-
-  celery-flower:
-    image: mher/flower:0.9.7
-    command: ["flower", "--broker=amqp://${RABBITMQ_USER}:${RABBITMQ_PASSWORD}@rabbitmq:5672//", "--port=${CELERY_FLOWER_PORT}"]
-    ports:
-      - "${CELERY_FLOWER_PORT}:${CELERY_FLOWER_PORT}"
-    depends_on:
-      - rabbitmq
-      - redis
-    networks:
-      - rabbitmq-go-net
-      - redis-go-net
-
-
-
-
 networks:
   backend-frontend:
-  rabbitmq-go-net:
-  redis-go-net:
+  zookeeper-kafka:
   frontend-services:
+
